--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ section{
     width: 500px;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.24);
+    max-width: 400px;
     
 }
 
